--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,11 @@ pytest>=7.4.3
 mcp>=1.2.0
 requests>=2.28.0
 python-dateutil>=2.8.2
+
+fastmcp>=0.1.0
+
+# Newly added dependencies
+rich
+uvloop
+typer
+poetry
