--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11']
 
     steps:
       - name: Checkout code
@@ -24,24 +24,19 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+        uses: snok/install-poetry@v1
+        with:
+          version: 2.1.2
+          virtualenvs-create: true
+          virtualenvs-in-project: true
 
+      - name: Configure Poetry
+        run: |
+          poetry config virtualenvs.in-project true
+          
       - name: Install dependencies
         run: |
-          poetry install
-
-      - name: Lint with flake8
-        run: |
-          poetry add flake8
-          poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-      - name: Check typing with mypy
-        run: |
-          poetry add mypy
-          poetry run mypy mcp/
+          poetry install --no-interaction --with dev
 
       - name: Build package
         run: |
@@ -49,7 +44,7 @@ jobs:
           ls -la dist/
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: uml-mcp-dist-${{ matrix.python-version }}
           path: dist/
