--- a/smithery.yaml
+++ b/smithery.yaml
@@ -1,71 +1,39 @@
-version: "1.0"
-name: "uml-mcp"
-description: "UML diagram generation server with MCP interface"
-
-# This is the main Smithery configuration section
+# Smithery.ai configuration
 startCommand:
   type: stdio
-  configSchema: {
-    "type": "object",
-    "properties": {
-      "api_port": {
-        "type": "integer",
-        "default": 8000,
-        "description": "Port for the UML-MCP server API"
-      },
-      "kroki_port": {
-        "type": "integer",
-        "default": 8001,
-        "description": "Port for the Kroki API server"
-      },
-      "output_dir": {
-        "type": "string",
-        "default": "./output",
-        "description": "Directory for output files"
+  configSchema:
+    type: "object"
+    properties:
+      debug:
+        type: "boolean"
+        description: "Enable debug mode for verbose logging"
+        default: false
+      output_dir:
+        type: "string"
+        description: "Directory to store generated diagram files (if applicable)"
+        default: "/app/output"
+    additionalProperties: false
+    description: "UML diagram generation server with MCP interface supporting PlantUML, Mermaid, Kroki, and D2"
+  commandFunction: |-
+    (config) => {
+      // Build command arguments
+      const args = ["mcp_server.py", "--transport", "stdio"];
+      
+      // Add debug flag if enabled
+      if (config.debug) {
+        args.push("--debug");
       }
+      
+      // Return command configuration
+      return {
+        command: "python",
+        args: args,
+        env: {
+          "UML_MCP_OUTPUT_DIR": config.output_dir
+        }
+      };
     }
+  exampleConfig: {
+    "debug": false,
+    "output_dir": "/app/output"
   }
-  commandFunction: |
-    (config) => ({
-      command: "poetry",
-      args: ["run", "python", "mcp_server.py"],
-      env: {
-        API_PORT: config.api_port || 8000,
-        KROKI_PORT: config.kroki_port || 8001,
-        MCP_OUTPUT_DIR: config.output_dir || "./output"
-      },
-    });
-
-# These environment configurations are for local development/testing
-# and not directly used by Smithery deployment
-environments:
-  development:
-    docker:
-      compose: "docker-compose.yml"
-    setup:
-      - cmd: "poetry install --with dev"
-    commands:
-      start:
-        - cmd: "poetry run python mcp_server.py"
-  
-  test:
-    docker:
-      compose: "docker-compose.yml"
-    setup:
-      - cmd: "poetry install --with dev"
-    commands:
-      test:
-        - cmd: "poetry run pytest -xvs"
-      lint:
-        - cmd: "poetry run pre-commit run --all-files"
-      coverage:
-        - cmd: "poetry run pytest --cov=mcp --cov-report=term --cov-report=html"
-
-  production:
-    docker:
-      compose: "docker-compose.yml"
-    setup:
-      - cmd: "poetry install --without dev"
-    commands:
-      start:
-        - cmd: "poetry run python mcp_server.py"
